apps/immich/deployment-ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      runtimeClassName: nvidia
      securityContext:
        runAsUser: 1000
        runAsGroup: 991
        fsGroup: 991
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.140.0-cuda
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          volumeMounts:
            - name: model-cache
              mountPath: /cache
          resources:
            requests:
              memory: "256M"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "2"
              nvidia.com/gpu: 1
      volumes:
        - name: model-cache
          emptyDir:
            sizeLimit: 50Gi
