apps/immich/service-ml.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
  - name: http
    port: 80
    targetPort: 3003
    protocol: TCP
  type: ClusterIP
